samples/_failures_safe/1761285638_32560c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e2ae775.c: In function ‘main’:
./samples/SAFE/__tmp_0e2ae775.c:157:27: error: expected ‘)’ at end of input
  157 |             while (getchar
      |                   ~       ^
      |                           )
./samples/SAFE/__tmp_0e2ae775.c:157:13: error: expected declaration or statement at end of input
  157 |             while (getchar
      |             ^~~~~
./samples/SAFE/__tmp_0e2ae775.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e2ae775.c:157:13: error: expected declaration or statement at end of input
